# EAA3

./: .gitignore  CONTACT  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: cliff.toml
.github/ISSUE_TEMPLATE/: cn-bug-report.yaml  en-bug-report.yaml
.github/workflows/: check.yml  install.yml  sync_schema_files.yml
.nicegui/: storage-general.json
agent/: main.py
agent/custom/: action.py  reco.py
agent/utils/: __init__.py  config.py  excel.py  gui.py  item.py  logger.py  pathbase.py  win.py
assets/: interface.json
assets/resource/: default_pipeline.json
assets/resource/pipeline/: FirstTimeEstateSurvey.json  FirstTimeSCZSurvey.json  OpenBrowser.json  Register.json  SelectDatasetRow.json  SharedNode.json  custom.json
tools/: deploy_python_env_linux.sh  get_cli.bat
tools/ci/: configure.py  install.py  setup_embed_python.py
