[project]
name = "eaa3"
version = "0.1.0"
description = "Estate Auto Assistant 3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "et-xmlfile>=2.0.0",
    "json-with-comments>=1.2.10",
    "loguru>=0.7.3",
    "maaagentbinary>=1.0.1",
    "maafw>=5.2.6",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "strenum>=0.4.15",
    "win32-setctime>=1.2.0",
    "wxpython>=4.2.4",
]
